welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:6: error: '(' expected but 'if' found.
		if if (a<b<c) return true
                   ^inOrderEqual:8: error: illegal start of simple expression
} 
^